--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,11 @@ article {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
+
+article + article {
+  margin-top: 2rem;
+}
+
+code {
+  font-size: 16px;
+}
